# chronicle

./: .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  app.py  chrome.py  cli.py  filter.py  forms.py  keybindings.py  models.py  screens.py  storage.py  utils.py  voice.py
models/: __init__.py  item.py  journal_entry.py  storage.py  todo.py
tests/: __init__.py  test_app_status.py  test_app_storage.py  test_storage.py
views/: __init__.py  calendar.py  forms.py  journal.py  journal_view.py  notes.py  schedule.py  todo_view.py  todos.py
